feat: add lifecycle publish center and product docs